# chatbot

./: .dockerignore  .gitignore  Dockerfile.frontend  README.md  chatbot.code-workspace  dev_run.sh  docker-compose.yaml  package-lock.json  package.json  run_application.sh  tailwind.config.ts
api/: .dockerignore  .env.sample  Dockerfile.api  README.md  agent_flow.py  agent_integration.py  lifespan.py  main.py  requirements.txt  test.py  test_weather.py
api/auth/: __init__.py
api/llm_chain/: __init__.py  initialize_llm_chain.py
api/model_inference/: __init__.py  infer_model_chain.py  rephrase_question.py
api/models/: user.py
api/ollama_inference/: infer_llama_chain.py
api/routers/: auth.py  chats.py  documents.py  seed.py  users.py
app/: Chats.tsx  global.css  layout.tsx  page.tsx
app/chats/: page.tsx
chatbot-api/: Dockerfile.api  db_lifespan.py  lifespan.py  main.py  pyproject.toml  requirements.txt  start.sh  start_and_seed.sh
chatbot-api/auth/: auth_handler.py
chatbot-api/chatbot_api/: .env  __init__.py
chatbot-api/models/: chat.py  user.py
chatbot-api/ollama_inference/: __init__.py  infer_llama_chain.py
chatbot-api/utils/: __init__.py  encrypt_password.py
chatbot-api/vector_doc_db/: chroma.sqlite3
chatbot-api/vectordb_handle/: __init__.py  delete_from_chroma.py  delete_from_qdrant.py  upsert_to_chroma.py
frontend/: .env.sample  Dockerfile.frontend  package-lock.json
hooks/: useAuth.ts
layouts/: Auth.tsx  WithSidebar.tsx
stores/: activeChat.ts  activeChatMessages.ts  chats.ts  sidebar.ts  userChatsStore.ts
utils/: decodeToken.ts
(+40 files in other folders)
